# IT-Inventar-DB

./: .gitignore  LICENSE  README.md  config.py  database.py  main.py  pyproject.toml  utils.py
gui/: app.py  widgets.py
gui/dialogs/: association_dialogs.py  audit_log_dialog.py  device_dialog.py  material_dialog.py  settings_dialog.py
gui/tabs/: dashboard_tab.py
